<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/titleLogin"
        android:layout_width="146dp"
        android:layout_height="55dp"
        android:text="@string/titleLogin"
        android:textAlignment="center"
        android:textColor="@color/theme_purple"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edtEmailLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtEmailLogin"
        android:layout_width="291dp"
        android:layout_height="49dp"
        android:ems="10"
        android:hint="@string/hntEmail"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/hint_ash"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.408"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.509" />

    <ImageView
        android:id="@+id/img_eye1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/edtPasswordLogin"
        app:layout_constraintTop_toBottomOf="@+id/imageView13"
        app:srcCompat="@drawable/ic_eye" />

    <EditText
        android:id="@+id/edtPasswordLogin"
        android:layout_width="287dp"
        android:layout_height="54dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/hntPassword"
        android:inputType="textPassword"
        android:textColorHint="@color/hint_ash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.395"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmailLogin" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="288dp"
        android:layout_height="57dp"
        android:layout_marginTop="80dp"
        android:text="@string/btnLogin"
        android:textColor="#FFFFFF"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/txtSigninGoogle"
        android:layout_width="188dp"
        android:layout_height="42dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="310dp"
        android:text="@string/sign_in_with_google"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="550dp"
        android:text="@string/dont_have_an_account_txt"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="550dp"
        android:layout_marginEnd="80dp"
        android:text="@string/dont_have_an_account"
        android:textColor="@color/theme_purple"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="55dp"
        android:layout_height="56dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="488dp"
        android:src="@drawable/google_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:rotationX="-2"
        app:layout_constraintBottom_toTopOf="@+id/edtEmailLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/edtEmailLogin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.453"
        app:srcCompat="@drawable/deco4" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="29dp"
        android:rotation="-10"
        android:rotationX="180"
        android:rotationY="180"
        app:layout_constraintEnd_toStartOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/deco4" />

    <TextView
        android:id="@+id/forgot_pass_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pass_word"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.798"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.464" />

</androidx.constraintlayout.widget.ConstraintLayout>