<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/diary3">

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/dpink"
        android:onClick="ClickBtnSave"
        android:text="@string/save_btn"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/diaryEntryClose"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="213dp"
        android:background="@drawable/ic_baseline_close_24"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/close_btn"
        android:hapticFeedbackEnabled="false"
        android:onClick="ClickBtnClose"
        android:src="@drawable/ic_baseline_close_24"
        app:backgroundTint="@color/dblack"
        app:layout_constraintEnd_toStartOf="@+id/btnSave"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/diaryDate"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/dblack"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="date"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.793"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diaryEntryClose"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnSpeaker"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="132dp"
        android:background="@drawable/speaker"
        android:contentDescription="@string/speaker"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.808"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@color/dgreen"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar5"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@color/dgreen"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/diaryTitle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/dblack"
        android:hint="@string/title"
        android:minHeight="48dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diaryDate" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/diaryContent"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/dblack"
        android:hint="@string/content"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diaryTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>