<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">


    <TextView
        android:id="@+id/title_reset_password"
        android:layout_width="258dp"
        android:layout_height="56dp"
        android:layout_marginTop="140dp"
        android:text="@string/title_reset_password"
        android:textAlignment="center"
        android:textColor="@color/theme_teal"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="280dp"
        android:layout_height="57dp"
        android:text="@string/btn_reset"
        android:textColor="#FFFFFF"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRCPassword"
        app:layout_constraintVertical_bias="0.285"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/edtRPassword"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:hint="@string/hnt_new_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="@color/hint_ash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_reset_password" />

    <ImageView
        android:id="@+id/img_eye2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="41dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edtRPassword"
        app:layout_constraintTop_toBottomOf="@+id/img_deco3.1"
        app:srcCompat="@drawable/ic_eye" />

    <ImageView
        android:id="@+id/img_eye3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="41dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_eye2"
        app:srcCompat="@drawable/ic_eye" />

    <EditText
        android:id="@+id/edtRCPassword"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/hnt_confirm_new_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="@color/hint_ash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRPassword" />

    <ImageView
        android:id="@+id/img_deco3.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="197dp"
        android:layout_marginBottom="1dp"
        android:rotation="-5"
        app:layout_constraintBottom_toTopOf="@+id/title_reset_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/deco3" />

    <ImageView
        android:id="@+id/img_deco3.2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="300dp"
        android:rotation="176"
        android:rotationX="-13"
        android:rotationY="21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnReset"
        app:srcCompat="@drawable/deco3" />

</androidx.constraintlayout.widget.ConstraintLayout>